deployment/experiment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  number: 8080
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-service
                port:
                  number: 8090
